--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,9 @@ jobs:
             - target/debug/deps
           key: v4-cargo-cache-{{ arch }}-{{ checksum "Cargo.lock" }}
       - run:
-          cargo test -- -Z unstable-options --format json | cargo2junit > test-results results.xml
+          cargo test -- -Z unstable-options --format json | cargo2junit > test-results/results.xml
+      - store_artifacts:
+          path: test-results
       - store_test_results:
           path: test-results
 
